# palautusrepositorio

viikko1/nhl-statistics/: .coverage  pyproject.toml
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_service_test.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
