[project]
name = "nhl-statistics"
version = "0.1.0"
description = ""
authors = [
    {name = "Matti Luukkainen",email = "mluukkai@iki.fi"}
]
license = {text = "MIT"}
requires-python = "^3.12"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.1.0)",
    "coverage (>=7.10.7,<8.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
coverage = "^7.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
