[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "anjovir",email = "avirtanen@tutanota.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "fastapi (>=0.121.3,<0.122.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flask = "^3.1.2"
pytest = "^9.0.1"

